# surdarla.github.io

./: .buildinfo  .gitignore  .pre-commit-config.yaml  README.md  _config.yml  _toc.yml  about.html  about.md  build_jupyter_book.py  genindex.html  index.html  netlify.toml  objects.inv  prf-prf.html  pyproject.toml  requirements.txt  robot.txt  search.html  searchindex.js  sitemap.xml  test.py
.obsidian/: app.json  appearance.json  community-plugins.json  core-plugins-migration.json  core-plugins.json  graph.json  types.json  workspace.json
Blog/: basics.md
Dev/: python.md  readme.md
Dev/python/: Python.md  python.html
Excalidraw/: Drawing 2024-07-15 10.00.04.excalidraw.md  Drawing 2024-07-15 10.10.21.excalidraw.md
_build/.doctrees/: about.doctree  environment.pickle
_build/html/: .buildinfo  about.html  genindex.html  objects.inv  prf-prf.html  search.html  searchindex.js  sitemap.xml
_data/: authors.yml
_featured_categories/: --Python.md  DeepLearning.md  Dev.md  Python.md  deeplearning.md  dev.md  mldl.md
_featured_tags/: python.md
_featured_tags/python/: yd.md
_includes/: my-head.html
_posts/: 2021-08-15-exemple.markdown  2021-08-15-exemple.md
_sass/: my-inline.scss  my-style.scss
_sources/: about.md
_sphinx_design_static/: design-style.4045f2051d55cab465a707391d5b2007.min.css
_static/: design-style.4045f2051d55cab465a707391d5b2007.min.css  documentation_options.js  my_css.css  webpack-macros.html
about/: index.html
blog/: basics.md
doc/: README.md
scripts/: utt.md
storage/: _config_storage.yml  draft_for_all.md  temp.ipynb
(+812 files in other folders)
