[tool.poetry]
name = "surdarla-book"
version = "0.1.0"
description = "it gonna be a long way"
authors = ["surdarla <rlskejdk123@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "surdarla_book"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
pandas = "^2.0.3"
jupyter-book = "^0.15.1"
sphinx-sitemap = "^2.5.0"
sphinx-proof = "^0.1.3"
torch = "^2.0.1"
ipynbname = "^2023.2.0.0"
matplotlib = "^3.7.2"
torchinfo = "^1.8.0"
manim = "^0.17.3"
scikit-learn = "^1.3.0"
ghp-import = "^2.1.0"
pre-commit = "^3.3.3"
ffmpeg = "^1.4"
ffmpeg-python = "^0.2.0"
imageio = {extras = ["ffmpeg"], version = "^2.31.1"}
konlpy = "^0.6.0"
nltk = "^3.8.1"
gensim = "^4.3.1"
js2py = "^0.74"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
